--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ input.split {
 	height: 100%;
 	overflow-y: scroll;
 	padding: 0 0.5em;
+	border-left: 1px solid lightgray;
 }
 
 .select .description > h1 {
